--- a/assets/general.scss
+++ b/assets/general.scss
@@ -26,8 +26,20 @@ html {
 }
 
 body {
-    /*ajuste de fondo , tamaño de fuente y tipo de fuente*/
+    /*ajuste tamaño de fuente y box model*/
     box-sizing: border-box;
     font-size: 1.5rem;
-    background-color: var(--Very_light_gray_background_headings_buttons);
+}
+
+main {
+    /*ajuste de fondo y pocicionamiento*/
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    background-color: var(Very_light_gray_background_headings_buttons);
 }
