--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,72 @@
 @use '../assets/general.scss';
 
+/*section principal card*/
+
+.container {
+    /*tamaño of card and font*/
+    width: 100%;
+    max-width: 16rem;
+    //max-width: 58rem;
+    //max-height: 32rem;
+    height: 100%;
+    max-height: 65.1rem;
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
+    h1 {
+        margin: 0;
+        text-align: justify;
+        font-weight: 700;
+        color: var(--Very_light_gray_background_headings_buttons);
+        font-family: var(--font_tittle);
+    }
+    p,
+    a {
+        margin: 0;
+        font-weight: 400;
+        text-align: justify;
+        text-decoration: none;
+        font-family: var(--font_paragraphs);
+    }
+    span {
+        //tamaño of icons
+        height: 5rem;
+        width: 5rem;
+    }
+    /*contenido individual of card*/
+    .sedans {
+        width: inherit;
+        height: 21.7rem;
+        border-radius: 0.5rem 0.5rem 0 0;
+        background-color: var(--Bright_orange);
+    }
+    .suvs {
+        width: inherit;
+        height: 21.7rem;
+        background-color: var(--Dark_cyan);
+    }
+    .luxury {
+        width: inherit;
+        height: 21.7rem;
+        border-radius: 0 0 0.5rem 0.5rem;
+        background-color: var(--Very_dark_cyan);
+    }
+}
+
+
 /*section de autor y diseño*/
 
 .attribution {
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     text-align: center;
+    font-family: var(--font_paragraphs);
     a {
         color: hsl(228, 45%, 44%);
+        text-decoration-style: none;
+        text-decoration: none;
+    }
+    a:hover {
+        cursor: pointer;
+        color: var(--Desaturated_blue);
+        opacity: 0.88;
     }
 }
