agregando modificaciones a la maquetacion y estilos mobile firts

--- a/assets/general.pug
+++ b/assets/general.pug
@@ -6,7 +6,7 @@ head
     link(rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon")
     link(rel="stylesheet" href="./css/normalize.css")
     link(rel='stylesheet' href='./css/style.css')
-    //- link(rel="stylesheet" media="(min-width: 625px)" href="./css/desktop.css" )
+    link(rel="stylesheet" media="(min-width: 625px)" href="./css/desktop.css" )
     title Frontend Mentor | Column Card Componet
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
