--- a/css/style.scss
+++ b/css/style.scss
@@ -1,72 +1,92 @@
-@use '../assets/general.scss';
-
-/*section principal card*/
-
-.container {
-    /*tamaño of card and font*/
-    width: 100%;
-    max-width: 16rem;
-    //max-width: 58rem;
-    //max-height: 32rem;
-    height: 100%;
-    max-height: 65.1rem;
-    margin-top: 2rem;
-    margin-bottom: 0.5rem;
-    h1 {
-        margin: 0;
-        text-align: justify;
-        font-weight: 700;
-        color: var(--Very_light_gray_background_headings_buttons);
-        font-family: var(--font_tittle);
+    @use '../assets/general.scss';
+    /*section principal card*/
+    
+    .centrar {
+        /*ajuste centrado y pocicionamiento*/
+        width: 90vw;
+        height: 90vh;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        .container {
+            /*tamaño of card*/
+            display: grid;
+            grid-template-columns: repeat(1, 1fr);
+            height: 90vh;
+            /*contenido individual of card*/
+            .section_card {
+                height: 50rem;
+                width: 30rem;
+                padding: 4rem;
+            }
+            .section_card:nth-child(1) {
+                border-radius: 0.5rem 0.5rem 0 0;
+                background-color: var(--Bright_orange);
+            }
+            .section_card:nth-child(2) {
+                background-color: var(--Dark_cyan);
+            }
+            .section_card:nth-child(3) {
+                border-radius: 0 0 0.5rem 0.5rem;
+                background-color: var(--Very_dark_cyan);
+            }
+            h1 {
+                text-transform: uppercase;
+                font-weight: 700;
+                font-family: var(--font_tittle);
+                color: var(--Very_light_gray_background_headings_buttons);
+            }
+            p {
+                font-weight: 400;
+                line-height: 1.7;
+                margin-bottom: 7rem;
+                font-family: var(--font_paragraphs);
+                color: var(--Transparent_white_paragraphs);
+            }
+            a {
+                text-align: center;
+                padding: 1.2rem 1.9rem;
+                font-weight: 400;
+                border-radius: 5rem;
+                text-decoration: none;
+                cursor: pointer;
+                border: 0.3rem solid var(--Very_light_gray_background_headings_buttons);
+                box-shadow: 0.1rem 0.1rem 0.5rem rgba(56, 56, 56, 0.5);
+                font-family: var(--font_paragraphs);
+                background-color: var(--Very_light_gray_background_headings_buttons);
+            }
+            .section_card:nth-child(1)>a {
+                color: var(--Bright_orange);
+            }
+            .section_card:nth-child(2)>a {
+                color: var(--Dark_cyan);
+            }
+            .section_card:nth-child(3)>a {
+                color: var(--Very_dark_cyan);
+            }
+            .section_card>a:hover {
+                background: none;
+                color: var(--Very_light_gray_background_headings_buttons);
+            }
+        }
+        /*section de autor y diseño*/
+        .attribution {
+            text-align: center;
+            font-family: var(--font_paragraphs);
+            h3 {
+                font-size: 1.5rem;
+            }
+            a {
+                color: hsl(228, 45%, 44%);
+                text-decoration-style: none;
+                text-decoration: none;
+            }
+            a:hover {
+                cursor: pointer;
+                color: var(--Desaturated_blue);
+                opacity: 0.88;
+            }
+        }
     }
-    p,
-    a {
-        margin: 0;
-        font-weight: 400;
-        text-align: justify;
-        text-decoration: none;
-        font-family: var(--font_paragraphs);
-    }
-    span {
-        //tamaño of icons
-        height: 5rem;
-        width: 5rem;
-    }
-    /*contenido individual of card*/
-    .sedans {
-        width: inherit;
-        height: 21.7rem;
-        border-radius: 0.5rem 0.5rem 0 0;
-        background-color: var(--Bright_orange);
-    }
-    .suvs {
-        width: inherit;
-        height: 21.7rem;
-        background-color: var(--Dark_cyan);
-    }
-    .luxury {
-        width: inherit;
-        height: 21.7rem;
-        border-radius: 0 0 0.5rem 0.5rem;
-        background-color: var(--Very_dark_cyan);
-    }
-}
-
-
-/*section de autor y diseño*/
-
-.attribution {
-    font-size: 1.5rem;
-    text-align: center;
-    font-family: var(--font_paragraphs);
-    a {
-        color: hsl(228, 45%, 44%);
-        text-decoration-style: none;
-        text-decoration: none;
-    }
-    a:hover {
-        cursor: pointer;
-        color: var(--Desaturated_blue);
-        opacity: 0.88;
-    }
-}
