--- a/assets/general.scss
+++ b/assets/general.scss
@@ -11,11 +11,9 @@
     --font_tittle: 'Big Shoulders Display', cursive;
     --font_paragraphs: 'Lexend Deca', sans-serif;
     /*colors of proyect*/
-    //primary 
     --Bright_orange: hsl(31, 77%, 52%);
     --Dark_cyan: hsl(184, 100%, 22%);
     --Very_dark_cyan: hsl(179, 100%, 13%);
-    //neutral
     --Transparent_white_paragraphs: hsla(0, 0%, 100%, 0.75);
     --Very_light_gray_background_headings_buttons: hsl(0, 0%, 95%);
 }
@@ -29,17 +27,7 @@ body {
     /*ajuste tamaño de fuente y box model*/
     box-sizing: border-box;
     font-size: 1.5rem;
-}
-
-main {
-    /*ajuste de fondo y pocicionamiento*/
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
+    margin: 0;
+    padding: 0;
     background-color: var(Very_light_gray_background_headings_buttons);
 }
