--- a/index.pug
+++ b/index.pug
@@ -2,30 +2,30 @@ doctype html
 html(lang='es')
     include ./assets/general.pug
     body
-        main
+        main.centrar
             section.container
-                article.sedans
-                    span.icon_sedans
-                    h1 Sedans
+                article.section_card
+                    img(src="./images/icon-sedans.svg" alt="img_sedans")
+                    h1 SEDANS
                     p
                         |Choose a sedan for its affordability and excellent fuel economy. 
                         | Ideal for cruising in the city or on your next road trip.
                     
-                    a Learn More
-                article.suvs
-                    span.icon_suvs
-                    h1 SUVs
+                    a(href="#" target="_blank" rel="noreferrer").boton_sedans Learn More
+                article.section_card
+                    img(src="./images/icon-suvs.svg" alt="img_suvs")
+                    h1 SUVS
                     p
                         | Take an SUV for its spacious interior, power, and versatility. 
                         | Perfect for your next family vacation and off-road adventures.
-                    a Learn More
-                article.luxury
-                    span.icon_luxury
-                    h1 Luxury
+                    a(href="#" target="_blank" rel="noreferrer").boton_suvs Learn More
+                article.section_card
+                    img(src="./images/icon-luxury.svg" alt="img_luxury")
+                    h1 LUXURY
                     p
                         | Cruise in the best car brands without the bloated prices. 
                         | Enjoy the enhanced comfort of a luxury rental and arrive in style.
-                    a Learn More
+                    a(href="#" target="_blank" rel="noreferrer").boton_luxury Learn More
             div.attribution
                 h3
                     | Challenge by 
