--- a/css/style.css
+++ b/css/style.css
@@ -21,78 +21,48 @@
 html {
   /*ajuste para uso del rem 1 rem = 10px para tamaño de fuente*/
   font-size: 62.5%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   /*ajuste tamaño de fuente y box model*/
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   font-size: 1.5rem;
-  margin: 0;
-  padding: 0;
-  background-color: var(Very_light_gray_background_headings_buttons);
+  background-color: var(--Very_light_gray_background_headings_buttons);
 }
 
-/*section principal card*/
-.centrar {
-  /*ajuste centrado y pocicionamiento*/
-  width: 90vw;
-  height: 90vh;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.container {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  /*section de autor y diseño*/
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 5%;
 }
-.centrar .container {
-  /*tamaño of card*/
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[1];
-  grid-template-columns: repeat(1, 1fr);
-  height: 90vh;
-  /*contenido individual of card*/
+.container .section_card {
+  width: 88%;
+  padding: 12%;
 }
-.centrar .container .section_card {
-  height: 50rem;
-  width: 30rem;
-  padding: 4rem;
-}
-.centrar .container .section_card:nth-child(1) {
+.container .section_card:first-child {
   border-radius: 0.5rem 0.5rem 0 0;
-  background-color: var(--Bright_orange);
 }
-.centrar .container .section_card:nth-child(2) {
-  background-color: var(--Dark_cyan);
-}
-.centrar .container .section_card:nth-child(3) {
+.container .section_card:last-child {
   border-radius: 0 0 0.5rem 0.5rem;
-  background-color: var(--Very_dark_cyan);
 }
-.centrar .container h1 {
+.container .section_card h1 {
   text-transform: uppercase;
   font-weight: 700;
   font-family: var(--font_tittle);
   color: var(--Very_light_gray_background_headings_buttons);
 }
-.centrar .container p {
+.container .section_card p {
   font-weight: 400;
   line-height: 1.7;
-  margin-bottom: 7rem;
+  margin-bottom: 5rem;
   font-family: var(--font_paragraphs);
   color: var(--Transparent_white_paragraphs);
 }
-.centrar .container a {
+.container .section_card a {
   text-align: center;
   padding: 1.2rem 1.9rem;
   font-weight: 400;
@@ -100,39 +70,49 @@ body {
   text-decoration: none;
   cursor: pointer;
   border: 0.3rem solid var(--Very_light_gray_background_headings_buttons);
-  -webkit-box-shadow: 0.1rem 0.1rem 0.5rem rgba(56, 56, 56, 0.5);
-          box-shadow: 0.1rem 0.1rem 0.5rem rgba(56, 56, 56, 0.5);
+  box-shadow: 0.1rem 0.1rem 0.5rem rgba(56, 56, 56, 0.5);
   font-family: var(--font_paragraphs);
   background-color: var(--Very_light_gray_background_headings_buttons);
 }
-.centrar .container .section_card:nth-child(1) > a {
+.container .section_card:nth-child(1) {
+  background-color: var(--Bright_orange);
+}
+.container .section_card:nth-child(2) {
+  background-color: var(--Dark_cyan);
+}
+.container .section_card:nth-child(3) {
+  background-color: var(--Very_dark_cyan);
+}
+.container .section_card:nth-child(1) > a {
   color: var(--Bright_orange);
 }
-.centrar .container .section_card:nth-child(2) > a {
+.container .section_card:nth-child(2) > a {
   color: var(--Dark_cyan);
 }
-.centrar .container .section_card:nth-child(3) > a {
+.container .section_card:nth-child(3) > a {
   color: var(--Very_dark_cyan);
 }
-.centrar .container .section_card > a:hover {
+.container .section_card > a:hover {
   background: none;
+  transition: all 0.2s ease-in-out;
   color: var(--Very_light_gray_background_headings_buttons);
 }
-.centrar .attribution {
+.container .attribution {
   text-align: center;
   font-family: var(--font_paragraphs);
 }
-.centrar .attribution h3 {
+.container .attribution h3 {
   font-size: 1.5rem;
 }
-.centrar .attribution a {
+.container .attribution a {
   color: #3e52a3;
-  -webkit-text-decoration-style: none;
-          text-decoration-style: none;
+  text-decoration-style: none;
   text-decoration: none;
 }
-.centrar .attribution a:hover {
+.container .attribution a:hover {
   cursor: pointer;
   color: var(--Desaturated_blue);
   opacity: 0.88;
 }
+
+/*# sourceMappingURL=style.css.map */
