--- a/assets/general.pug
+++ b/assets/general.pug
@@ -6,8 +6,8 @@ head
     link(rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon")
     link(rel="stylesheet" href="./css/normalize.css")
     link(rel='stylesheet' href='./css/style.css')
-    link(rel="stylesheet" media="(min-width: 625px)" href="./css/desktop.css" )
-    title Frontend Mentor | Column Card Componet
+    link(rel="stylesheet" media="(min-width: 1094px)" href="./css/desktop.css" )
+    title Column Card Componet | Frontend Mentor
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet")
