--- a/index.pug
+++ b/index.pug
@@ -2,8 +2,8 @@ doctype html
 html(lang='es')
     include ./assets/general.pug
     body
-        main.centrar
-            section.container
+        main.container
+            section.container2
                 article.section_card
                     img(src="./images/icon-sedans.svg" alt="img_sedans")
                     h1 SEDANS
@@ -26,7 +26,7 @@ html(lang='es')
                         | Cruise in the best car brands without the bloated prices. 
                         | Enjoy the enhanced comfort of a luxury rental and arrive in style.
                     a(href="#" target="_blank" rel="noreferrer").boton_luxury Learn More
-            div.attribution
+            section.attribution
                 h3
                     | Challenge by 
                     a(href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noreferrer") Frontend Mentor
